<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">yi旅资讯</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="icon_home_index">首页</string>
    <string name="icon_home_zixun">资讯</string>
    <string name="icon_home_fast">快捷</string>
    <string name="icon_home_news">消息</string>
    <string name="icon_home_mine">我的</string>
    
    <string name="login_more">点击登录  体验更多</string>
    <string name="login_username">用户名</string>
    <string name="login_password">密码</string>
    <string name="login_login">登录</string>
    <string name="login_register">注册新用户</string>
    <string name="loginout">退出当前帐号</string>
    <string name="pinglun">评论</string>
    <string name="zan">赞</string>
    <string name="cancel">取消</string>
    <string name="send">发送</string>
    <string name="fapinglun">发评论</string>
    <string name="fadongtai">发动态</string>
    <string name="xiepinglun">写评论...</string>
    <string name="pinglunlist">评论列表</string>
    <string name="search">搜索</string>
    <string name="shownewdt">秀动态</string>
    <string name="range_public">公开</string>
    <string name="range_friends">好友圈</string>
    <string name="range_self">仅自己</string>
    
    <string name="btn_fawenzi">发文字</string>
    <string name="btn_fapic">发图片</string>
    <string name="btn_qidai">敬请期待</string>
    <string name="loading">正在加载</string>
    
    <string name="scan_text">将二维码放入框内, 即可自动扫描</string>

    <string name="baiduMapAK">Na4uAgGdXoLsX6dq8EjKW1bi</string>

</resources>