<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    >

    <RelativeLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentTop="true" >

        <TextView
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:clickable="true"
            android:text="@string/cancel"
            android:textColor="@drawable/btn_tv"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/fapinglun"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:clickable="true"
            android:text="@string/send"
            android:textColor="@drawable/btn_tv"
            android:textSize="14sp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/view1"
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:layout_below="@+id/top"
        android:background="@color/ccc"
        android:orientation="horizontal" >
    </LinearLayout>

    <EditText
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/view1"
        android:background="@null"
        android:gravity="top"
        android:hint="@string/xiepinglun"
        android:inputType="textMultiLine"
        android:padding="20dp"
        android:textColor="@color/black"
        android:textColorHint="@color/cgrey"
        android:textSize="15sp"
        android:typeface="sans" >
    </EditText>

</RelativeLayout>