<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/white" >

    <FrameLayout
        android:id="@+id/frame_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/frameMenu"
        android:layout_alignParentTop="true" >
    </FrameLayout>

    <FrameLayout
        android:id="@+id/frameMenu"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/skin_tabbar_bg"
            android:baselineAligned="false"
            android:orientation="horizontal" >

            <!-- 首页 -->

            <FrameLayout
                android:id="@+id/layout_index"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" >

                <ImageView
                    android:id="@+id/image_index"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|center"
                    android:contentDescription="@string/icon_home_index"
                    android:src="@drawable/skin_tabbar_icon_index_select" />
            </FrameLayout>

            <!-- 资讯 -->

            <FrameLayout
                android:id="@+id/layout_zixun"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" >

                <ImageView
                    android:id="@+id/image_zixun"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|center"
                    android:contentDescription="@string/icon_home_zixun"
                    android:src="@drawable/skin_tabbar_icon_zixun_select" />
            </FrameLayout>
            
            <!-- 快捷按钮 -->

            <FrameLayout
                android:id="@+id/layout_fast"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" >

                <ImageView
                    android:id="@+id/image_fast"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|center"
                    android:contentDescription="@string/icon_home_fast"
                    android:src="@drawable/icon_home_fast" />
            </FrameLayout>

            <!-- 消息 -->

            <FrameLayout
                android:id="@+id/layout_news"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" >

                <ImageView
                    android:id="@+id/image_news"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|center"
                    android:contentDescription="@string/icon_home_news"
                    android:src="@drawable/skin_tabbar_icon_msg_select" />
            </FrameLayout>

            <!-- 我的 -->

            <FrameLayout
                android:id="@+id/layout_mine"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" >

                <ImageView
                    android:id="@+id/image_mine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|center"
                    android:contentDescription="@string/icon_home_mine"
                    android:src="@drawable/skin_tabbar_icon_mine_select" />
            </FrameLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#ccc" >
        </LinearLayout>

    </FrameLayout>
    
    <LinearLayout
            android:id="@+id/home_container_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#999999"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">
    </LinearLayout>

</RelativeLayout>