<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/white" >

    <RelativeLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentTop="true" >

        <TextView
            android:id="@+id/cancle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:clickable="true"
            android:gravity="center_vertical"
            android:text="@string/cancel"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/fadongtai"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/send"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:clickable="true"
            android:gravity="center_vertical"
            android:text="@string/send"
            android:textColor="@android:color/black"
            android:textSize="14sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_below="@+id/top"
        android:background="#ccc" >
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/selects"
        android:layout_below="@+id/top" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:gravity="top"
                android:hint="@string/shownewdt"
                android:inputType="textMultiLine"
                android:minHeight="100dp"
                android:padding="20dp"
                android:textColor="@color/black"
                android:textColorHint="@color/cgrey"
                android:textSize="15sp"
                android:typeface="sans" >
            </EditText>

            <com.yilvtzj.view.NoScrolGridView
                android:id="@+id/gridview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnWidth="@dimen/image_thumbnail_size"
                android:gravity="center"
                android:horizontalSpacing="@dimen/image_thumbnail_spacing"
                android:listSelector="@android:color/transparent"
                android:numColumns="3"
                android:stretchMode="columnWidth"
                android:verticalSpacing="@dimen/image_thumbnail_spacing" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/selects"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/line"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="invisible" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_btn_lightgrey_selector" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="0dp"
                    android:text="@string/range_public"
                    android:textColor="@android:color/black"
                    android:textSize="10sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="7dp"
            android:background="@drawable/bg_btn_lightgrey_selector"
            android:clickable="true" >

            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/range_public"
                android:textColor="@android:color/black"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_above="@+id/linearlayout"
        android:background="#ccc"
        android:orientation="horizontal" >
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearlayout"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >

        <FrameLayout
            android:id="@+id/selectImage"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/bg_btn_transparent_selector" >

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center" >

                <ImageView
                    android:layout_width="27dp"
                    android:layout_height="27dp"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/btn_camera" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="34dp"
                    android:text="选择图片"
                    android:textColor="@android:color/black"
                    android:textSize="14sp" />
            </FrameLayout>
        </FrameLayout>

        <LinearLayout
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="#ccc" >
        </LinearLayout>

        <FrameLayout
            android:id="@+id/selectPosition"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/bg_btn_transparent_selector" >

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal" >

                <ImageView
                    android:id="@+id/position_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/bg_btn_position_selector"
                    android:scaleType="center" />

                <TextView
                    android:id="@+id/position_wenzi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="30dp"
                    android:text="显示位置"
                    android:textColor="@android:color/black"
                    android:textSize="14sp" />
            </FrameLayout>
        </FrameLayout>
    </LinearLayout>

</RelativeLayout>